--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Welcome to Mironova.io</h1>
         </header>
         <main>
-            <p>Your site is ready to be deployed on Vercel!</p>
+            <p>Мой сайт в разработке. Совсем скоро вы сможете полюбоваться моими проектами! </p>
         </main>
     </div>
 </body>
