Add kitten GIF to main page and increase size

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>Welcome to Mironova.io</h1>
         </header>
         <main>
+            <img src="images/kitten.gif" alt="Котёнок с голубыми глазами" class="kitten-image">
             <p>Мой сайт в разработке. Совсем скоро вы сможете полюбоваться моими проектами! </p>
         </main>
     </div>
