redesign, update fonts and content

--- a/index.html
+++ b/index.html
@@ -7,36 +7,42 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="nav">
-        <a href="/" class="logo">Mironova.io</a>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#about">About</a></li>
-        </ul>
-    </nav>
+    <header class="header">
+        <div class="header-left">
+            <img src="images/avatar.png" alt="Evgenia" class="avatar">
+            <span class="name">Evgenia Mironova</span>
+        </div>
+        <nav class="header-nav">
+            <a href="#home" class="active"><span class="num">01</span> home</a>
+            <a href="#writing"><span class="num">02</span> writing</a>
+            <a href="#notes"><span class="num">03</span> notes</a>
+            <a href="#about"><span class="num">04</span> about</a>
+        </nav>
+    </header>
 
     <main class="container">
         <section class="hero">
-            <img src="images/kitten.gif" alt="Котёнок с голубыми глазами" class="hero-image">
-            <h1>Привет, меня зовут Mironova</h1>
-            <p class="lead">Мой сайт в разработке. Совсем скоро вы сможете полюбоваться моими проектами!</p>
+            <p class="hero-intro">HELLO, I AM EVGENIIA</p>
+            <h1 class="hero-title">I'm an analyst who loves building products.</h1>
+            <p class="hero-description">I focus on product thinking and analytics and like to look at projects end to end.</p>
+            <p class="hero-description">I have 7+ years of experience working across analytics, data engineering, and development. I enjoy breaking down complex problems and turning them into simple and reliable products. For me, it's not just about code or dashboards - it's about building things that actually help people.</p>
+            <p class="hero-description">Here you'll find my latest projects, both professional work and personal experiments.</p>
         </section>
 
         <section class="featured" id="projects">
             <h2>Featured Projects</h2>
             <div class="project-grid">
                 <article class="project-card">
-                    <h3>Проект 1</h3>
-                    <p>Описание первого проекта появится совсем скоро.</p>
+                    <h3>Project 1</h3>
+                    <p>Description of the first project coming soon.</p>
                 </article>
                 <article class="project-card">
-                    <h3>Проект 2</h3>
-                    <p>Описание второго проекта появится совсем скоро.</p>
+                    <h3>Project 2</h3>
+                    <p>Description of the second project coming soon.</p>
                 </article>
                 <article class="project-card">
-                    <h3>Проект 3</h3>
-                    <p>Описание третьего проекта появится совсем скоро.</p>
+                    <h3>Project 3</h3>
+                    <p>Description of the third project coming soon.</p>
                 </article>
             </div>
         </section>
