add Oceanic project with dedicated page

--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
             <h2>Featured Projects</h2>
             <div class="project-grid">
                 <article class="project-card">
-                    <h3>Project 1</h3>
-                    <p>Description of the first project coming soon.</p>
+                    <a href="oceanic.html" class="project-link">
+                        <div class="project-image-container">
+                            <img src="images/ocean.jpg" alt="Oceanic Project" class="project-image">
+                            <h3 class="project-title-overlay">Oceanic</h3>
+                        </div>
+                        <p>A whale tracking application that allows you to choose your favorite whale and track its movements.</p>
+                    </a>
                 </article>
                 <article class="project-card">
                     <h3>Project 2</h3>
