Add about page with navigation

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <a href="#home" class="active"><span class="num">01</span> home</a>
             <a href="#writing"><span class="num">02</span> writing</a>
             <a href="#notes"><span class="num">03</span> notes</a>
-            <a href="#about"><span class="num">04</span> about</a>
+            <a href="about.html"><span class="num">04</span> about</a>
         </nav>
     </header>
 
     <main class="container">
         <section class="hero">
-            <p class="hero-intro">HELLO, I AM EVGENIIA</p>
+            <p class="hero-intro">HELLO, I AM EVGENIA</p>
             <h1 class="hero-title">I'm an analyst who loves building products.</h1>
             <p class="hero-description">I focus on product thinking and analytics and like to look at projects end to end.</p>
             <p class="hero-description">I have 7+ years of experience working across analytics, data engineering, and development. I enjoy breaking down complex problems and turning them into simple and reliable products. For me, it's not just about code or dashboards - it's about building things that actually help people.</p>
