--- a/oceanic.html
+++ b/oceanic.html
@@ -16,7 +16,7 @@
             <a href="index.html"><span class="num">01</span> home</a>
             <a href="#writing"><span class="num">02</span> writing</a>
             <a href="#notes"><span class="num">03</span> notes</a>
-            <a href="#about"><span class="num">04</span> about</a>
+            <a href="about.html"><span class="num">04</span> about</a>
         </nav>
     </header>
 
