--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="hero">
             <p class="hero-intro">HELLO, I AM EVGENIA</p>
             <h1 class="hero-title">I'm an analyst who loves building products.</h1>
-            <p class="hero-description">I focus on product thinking and analytics and like to look at projects end to end.</p>
+            <p class="hero-description">I focus on product thinking and analytics and like to look at projects end to end, from identifying problems to making data-informed product decisions.</p>
             <p class="hero-description">I have 7+ years of experience working across analytics, data engineering, and development. I enjoy breaking down complex problems and turning them into simple and reliable products. For me, it's not just about code or dashboards - it's about building things that actually help people.</p>
             <p class="hero-description">Here you'll find my latest projects, both professional work and personal experiments.</p>
         </section>
