--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                     </a>
                 </article>
                 <article class="project-card">
-                    <h3>DogsAcross</h3>
-                    <p>Description of the second project coming soon.</p>
+                    <h3>Dogs Across</h3>
+                    <p>Description is coming soon.</p>
                 </article>
                 <article class="project-card">
                     <h3>Monkey Business</h3>
-                    <p>Description of the third project coming soon.</p>
+                    <p>Description is coming soon.</p>
                 </article>
             </div>
         </section>
